// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/combo-box On value change should render and match snapshot 1`] = `
<div>
  <label
    class="combo-box"
  >
    <input
      data-testid="input"
      list="combo-box"
      value=""
    />
  </label>
  <datalist
    id="combo-box"
  >
    <option
      value="Jane Austin"
    />
    <option
      value="John Doe"
    />
    <option
      value="Mark Roger"
    />
  </datalist>
</div>
`;

exports[`components/combo-box input clear event should render and match snapshot 1`] = `
<div>
  <label
    class="combo-box"
  >
    <input
      data-testid="input"
      list="combo-box"
      value="test"
    />
    <button
      class="button button--tertiary"
      data-testid="combobox-value-clear"
    >
      <i
        class="fas fa-times "
      />
    </button>
  </label>
  <datalist
    id="combo-box"
  >
    <option
      value="Jane Austin"
    />
    <option
      value="John Doe"
    />
    <option
      value="Mark Roger"
    />
  </datalist>
</div>
`;

exports[`components/combo-box should render and match snapshot 1`] = `
<div>
  <label
    class="combo-box"
  >
    <input
      data-testid="input"
      list="combo-box"
      value=""
    />
  </label>
  <datalist
    id="combo-box"
  >
    <option
      value="Jane Austin"
    />
    <option
      value="John Doe"
    />
    <option
      value="Mark Roger"
    />
  </datalist>
</div>
`;
